# C-Basic

./: README.md
1-intro/3-syntax/: 01_cin_cout_namespace.cpp  04_arithm_operations.cpp  06_if.cpp  07_switch.cpp
1-intro/4-functions/: 0_pow_simple.cpp
1-intro/6-all-in-one/: CMakeLists.txt
1-intro/6-all-in-one/menu/test/: menu_test.cpp
2-oop/3-polymorphism/: 01_complex_naive.cpp  02_0_complex_struct.cpp  02_1_complex_class.cpp  02_2_complex_class.cpp  02_3_complex_class.cpp  03_0_shapes.cpp  03_1_shapes_virtual.cpp  03_2_shapes_virtual.cpp  03_3_pure_virtual_call.cpp  04_animal.cpp  CMakeLists.txt
2-oop/4-templates/: lec_11_01_func_max.cpp  lec_11_02_func_max_float.cpp  lec_11_03_func_max_template.cpp  lec_11_04_func_max_specialization.cpp  lec_11_05_func_max_type_greater.cpp  lec_11_06_func_factorial.cpp  lec_11_07_func_several_args.cpp  lec_11_08_func_generate.cpp  lec_11_09_01_func_cpp_header.h  lec_11_09_02_func_cpp_source.inl  lec_11_09_12_func_cpp_source.cpp  lec_11_10_class_template.cpp  lec_11_11_class_template_inherit.cpp  lec_11_12_class_template_specialization.cpp  lec_11_13_class_full_template_specialization.cpp  lec_11_14_class_template_method.cpp  lec_11_15_class_non_type_template.cpp
2-oop/5-subtleties/: complex_value.cpp  complex_value_copy.cpp  convertion.cpp  destructors.cpp  explicit.cpp  move.cpp  virtual_destructor.cpp
3-unit-tests/2-gtest/examples/: CMakeLists.txt
3-unit-tests/2-gtest/examples/test/: test_assertions.cpp
3-unit-tests/2-gtest/project_gtest_by_cmake/: CMakeLists.txt
3-unit-tests/2-gtest/project_prebuilt_gtest/: CMakeLists.txt
3-unit-tests/2-gtest/project_with_gtest/: CMakeLists.txt
4-std/1-intro/: 01_string.cpp  02_string_file_extension.cpp  03_string_modify.cpp  04_file_io.cpp  05_filesystem.cpp  06_chrono.cpp  07_thread.cpp  CMakeLists.txt
4-std/2-container/: 1_array.cpp  2_vector.cpp  3_0_list.cpp  3_1_linked_list.cpp  3_2_linked_list_itr.cpp  3_3_array_itr.cpp  3_4_arr_vec_list.cpp  4_map.cpp  5_unordered_map.cpp  6_deque.cpp  line_separator.h
4-std/3-algorithm/: binary_search.cpp  partition.cpp  transform.cpp
6-subtleties/1-exceptions/: console_header.hpp  copy_file.cpp  copy_file_errors.cpp  error_codes_advanced.cpp  error_codes_basics.cpp  error_codes_classes.cpp  exceptions_advanced.cpp  exceptions_basics.cpp  exceptions_std.cpp  exceptions_usage.cpp
6-subtleties/2-move-noexcept/: CMakeLists.txt  exceptions.cpp  move.cpp  noexcept.cpp  tracer.hpp
6-subtleties/5-smart-ptr/: CMakeLists.txt  cycle_ref.cpp  lifetime.cpp  raw_pointer.cpp  shared_ptr.cpp  smart_ptr.cpp  unique_ptr.cpp  weak_ptr.cpp
7-multithreading/3-data-struct/: 1.linked_list.cpp  2.naive_thread_safe_linked_list.cpp  3.better_thread_safe_linked_list.cpp  4.monitor_object.cpp  5.atomic_motivation.cpp  6.atomic_usage.cpp
7-multithreading/4-condition_variable/: 0.cv.cpp  0.optional.cpp  0.unique_lock.cpp  1.condition.intro.cpp  2.condition.solution.cpp  3.waiting_queue.cpp
7-multithreading/5-async/: 1.async.cpp  3.count_primes.cpp  4.1.future.cpp  4.2.future_wait.cpp  4.3.promise_ex.cpp
7-multithreading/7-ecosystem/1-idioms/: CMakeLists.txt  copy_and_swap.cpp  copy_on_write.cpp  crtp.cpp  empty_base.cpp  scope_guard.cpp
7-multithreading/7-ecosystem/2-idioms/: CMakeLists.txt  mixin.cpp  self_assignment.cpp  shared_from_this.cpp  singleton.cpp  virtual_ctor.cpp
7-multithreading/7-ecosystem/2-idioms/pimpl/: CMakeLists.txt
7-multithreading/7-ecosystem/2-idioms/pimpl/details/: CMakeLists.txt  my_class.cpp  my_class.h
7-multithreading/7-ecosystem/2-idioms/pimpl/motivation/: CMakeLists.txt  main.cpp  my_class.cpp  my_class.h
7-multithreading/7-ecosystem/2-idioms/pimpl/solution/: CMakeLists.txt  main.cpp  my_class.cpp  my_class.h
7-multithreading/7-ecosystem/3-tooling/: CMakeLists.txt  deadlock.cpp  formatting.cpp  memory.cpp  tdy_example.cpp  thread.cpp  ub.cpp
